--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -6,3 +6,10 @@
   font-size: 40px;
   color: #010101;
 }
+
+.App {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  padding-bottom: 24px;
+}
