--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,6 +1,6 @@
 .gallery {
   display: grid;
-  max-width: calc(100vw - 48px);
+  max-width: calc(min(100vw, 1400px) - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   margin-top: 0;
